--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
-# Core Dependencies
-fastapi==0.104.1
-uvicorn==0.24.0
-jinja2==3.1.2
-python-multipart==0.0.6
+# Remarkable OCR - Python Dependencies
+# Voor installatie in LXC containers: zie docs/installation.md
 
-# Email & Security
-bcrypt==4.1.2
-cryptography==41.0.8
+# Core Web Framework
+fastapi>=0.104.1,<0.105.0
+uvicorn[standard]>=0.24.0,<0.25.0
+jinja2>=3.1.2,<3.2.0
+python-multipart>=0.0.6,<0.1.0
 
-# HTTP Client for OpenRouter API
-httpx==0.25.2
+# Security & Cryptography
+# Note: cryptography vereist system packages (zie docs/installation.md)
+bcrypt>=4.1.2,<4.2.0
+cryptography>=41.0.8,<42.0.0
 
-# Development
-python-dotenv==1.0.0
+# HTTP Client voor OpenRouter API
+httpx>=0.25.2,<0.26.0
+
+# Configuration Management
+python-dotenv>=1.0.0,<1.1.0
+
+# Development Dependencies (optioneel)
+# pytest>=7.4.0,<7.5.0
+# pytest-asyncio>=0.21.0,<0.22.0
