M: Requirements cleanup & gitignore update
- Hernoem requirements-minimal.txt naar requirements.txt (exacte match met install.sh)
- Backup oude requirements.txt naar requirements-full.txt.backup
- Update install.sh om requirements.txt te gebruiken (DRY principe)
- Uitgebreide .gitignore voor test bestanden, docs en development files
- Voorkomt merge van overbodige bestanden naar main branch

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,17 @@ processed/
 .pytest_cache/
 .coverage
 htmlcov/
+test_*.py
+
+# Development & Planning
+plan.md
+progress.md
+requirements-*.txt.backup
+
+# Documentation
+docs/
+.github/
+.rules
 
 # Documentation builds
 docs/_build/
